@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0b12
 
+	- Fl_Help_View didn't keep track of the background color
+	  of cells properly.
 	- Fl_Browser::item_width() didn't compute the width of
 	  the item properly when column_widths() was set.
 	- Fl_Button didn't check to see if the widget could
